--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Victoria-Sirghii.github.io/color-generator",
+  "homepage": "https://Victoria-Sirghii.github.io/stripe-nav-menu",
   "name": "reminder",
   "version": "0.1.0",
   "private": true,
